<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24dp_grey"
        android:title="@string/menu_item_user_profile"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_baseline_filter_list_24dp_grey"
        android:title="@string/menu_item_filter"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/manage_devices"
        android:icon="@drawable/ic_baseline_home_24dp_grey"
        android:title="@string/menu_item_manage_devices"
        app:showAsAction="collapseActionView"/>
</menu>