<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_18pr"
    tools:context=".ui.fragments.HeatersFragment"
    android:orientation="vertical"
    android:id="@+id/fragment_heaters">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_constraint_layout"
        android:elevation="5dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <GridLayout
            android:id="@+id/grid_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="1"
            android:columnCount="2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/status_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_device"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_column="0"
                android:layout_row="0"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_status"
                android:layout_gravity="end"
                android:checked="false"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:theme="@style/SwitchCompatStyle"/>
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_constraint_layout"
        android:elevation="5dp"
        android:layout_weight="6"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/min_temp_heater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/min_temp_heater"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:stepSize="1.0"
            android:valueFrom="7.0"
            android:valueTo="28.0"
            android:enabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/RangeSliderStyle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/max_temp_heater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/max_temp_heater"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_temp_heater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7°C"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="50dp"
            style="@style/MaterialTextViewStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_apply"
        android:layout_gravity="center_horizontal"
        style="@style/MaterialButtonStyle"/>
</LinearLayout>